--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -362,7 +362,7 @@
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm"> 
 <li class="cnjnctn-col">You provide a reasonable allowance for laundry or dry cleaning costs of a uniform or protective clothing</li>
-<li class="cnjnctn-col">You reimburse for laundry or dry cleaning services for a uniform or protective clothing and your employee provides receipts to support these amounts</li>
+<li class="cnjnctn-col">You reimburse for laundry or dry cleaning services for a uniform or protective clothing <strong>and</strong> your employee provides receipts to support these amounts</li>
 </ul>
 <h4>Taxable situation</h4>
 <p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
