--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -311,23 +311,22 @@
 <p class="mrgn-bttm-lg">Generally, if you provide special clothing or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 
 <h3>Situations</h3>
-<details><summary>Situation: You provide a <strong>uniform or a piece of clothing</strong> to your employee</summary>
-<h4>Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you provide a <strong>distinctive uniform</strong> that your employee must wear <strong>while carrying out the employment duties</strong>.</p>
-<h4>Taxable situation</h4>
-<p>If your employee can wear the clothing for personal purposes (outside of business hours), the benefit is taxable.</p>
-</details>
 
-<details><summary>Situation: You <strong>provide a uniform or a piece of clothing</strong> to your employee</summary>
+<details><summary>Situation: You <strong>provide a uniform, protective clothing, safeety footwear or safety glasses</strong> to your employee</summary>
 <h4>Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you provide one of the following:</p>
+<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you provide <strong>one</strong> of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"> A <strong>distinctive uniform</strong> that your employee must wear <strong>while carrying out the employment duties</strong></li>
-<li class="cnjnctn-col">Protective clothing (including safety footwear and safety glasses) designed to protect your employee from hazards associated with their employment</li>
+<li class="cnjnctn-col"><h4>Distinctive uniform</h4> 
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Your employee must wear <strong>while carrying out the employment duties</strong></li>
+<li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
+</ul>	</li>	
+<li class="cnjnctn-col"><h4>Protective clothing, safety footwear and safety glasses</h4> 
+<p>Designed to <strong>protect your employee from hazards associated</strong> with their employment</p>
+</li>
 </ul>
 <h4>Taxable situation</h4>
 <p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
-<p>If your employee can wear the clothing for personal purposes (outside of business hours), the benefit is taxable.</p>
 </details>
 
 <details><summary>Situation: You <strong>reimburse or provide an accountable advance</strong> for a <strong>uniform or protective clothing</strong></summary>
