--- a/guides/alberta/forms-publications.html
+++ b/guides/alberta/forms-publications.html
@@ -39,10 +39,7 @@
             		href: "https://www.canada.ca/en.html"
             		},{
             	title: "Canada Revenue Agency ",
-                     		href: "https://www.canada.ca/en/revenue-agency.html"
-            		},{
-            	title: "Forms and publications",
-                     		href: "https://www.canada.ca/en/revenue-agency/services/forms-publications.html"
+                     		href: "/cra-arc/guides/alberta/revenue-agency.html"
             		}],
             	search: true,
             	siteMenu: true,
