--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -312,7 +312,7 @@
 
 <h3>Situations</h3>
 
-<details><summary>Situation: You <strong>provide a uniform, protective clothing, safeety footwear or safety glasses</strong> to your employee</summary>
+<details><summary>Situation: You <strong>provide</strong> a distinctive uniform, protective clothing, safeety footwear or safety glasses to your employee</summary>
 <h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you provide <strong>one</strong> of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -329,7 +329,7 @@
 <p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
 </details>
 
-<details><summary>Situation: You <strong>reimburse or provide an accountable advance</strong> for a <strong>uniform or protective clothing</strong></summary>
+<details><summary>Situation: You <strong>reimburse or provide an accountable advance</strong> for a distinctive uniform, protective clothing, safeety footwear or safety glasses</summary>
 <h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you reimburse or provide an accountable advance for a uniform or protective piece of clothing and <strong>all</strong> of the following apply::</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm"> 
