--- a/guides/alberta/income-tax.html
+++ b/guides/alberta/income-tax.html
@@ -38,11 +38,8 @@
             		title: "Canada.ca",
             		href: "https://www.canada.ca/en.html"
             		},{
-            	title: "Canada Revenue Agency ",
-                     		href: "https://www.canada.ca/en/revenue-agency.html"
-            		},{
-            	title: "Forms and publications",
-                     		href: "https://www.canada.ca/en/revenue-agency/services/forms-publications.html"
+            	title: "Taxes",
+                     		href: "https://www.canada.ca/en/services/taxes.html"
             		}],
             	search: true,
             	siteMenu: true,
@@ -87,7 +84,7 @@
                             <li><a href="/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a></li>
                             <li><a href="/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></li>
                             <li><a href="/en/revenue-agency/services/e-services.html">All online services</a></li>
-                            <li><a href="/cra-arc/guides/alberta/forms-publications.html">Income tax package for 2022</a></li>
+                            <li><a href="/cra-arc/guides/alberta/general-income-tax-benefit-package.html">Income tax package for 2022</a></li>
                             <li><a href="/en/revenue-agency/services/payments-cra.html">Make a payment to the CRA</a></li>
                             <li><a href="/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/canadian-income-tax-rates-individuals-current-previous-years.html">Personal income tax rates</a></li>
                         </ul>
