--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -316,13 +316,13 @@
 <h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you provide <strong>one</strong> of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Distinctive uniform</h4> 
+<li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Your employee must wear <strong>while carrying out the employment duties</strong></li>
-<li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
+<li class="cnjnctn-col">Your employee <strong>must</strong> wear while carrying out the employment duties</li>
+<li class="cnjnctn-col">Your employee <strong>cannot</strong> wear the clothing for personal purposes, for example, outside of business hours</li>
 </ul>	</li>	
-<li class="cnjnctn-col"><h4>Protective clothing, safety footwear and safety glasses</h4> 
-<p>Designed to <strong>protect your employee from hazards associated</strong> with their employment</p>
+<li class="cnjnctn-col"><h4 class="text-muted">Protective clothing, safety footwear and safety glasses</h4> 
+<p><strong>Designed to protect</strong> your employee from hazards associated with their employment</p>
 </li>
 </ul>
 <h4>Taxable situation</h4>
