--- a/guides/alberta/alberta.html
+++ b/guides/alberta/alberta.html
@@ -45,7 +45,7 @@
                      		href: "/cra-arc/guides/alberta/forms-publications.html"
             		},{
             	title: "Tax packages for all years",
-                     		href: "https://www.canada.ca/en/revenue-agency/services/forms-publications.html"
+                     		href: "/cra-arc/guides/alberta/tax-packages-years.html"
             		},{
             	title: "Get a T1 income tax package",
                      		href: "/cra-arc/guides/alberta/general-income-tax-benefit-package.html"
