--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -294,27 +294,19 @@
   	
 <ul>
 
-<li><a href="#h_1">Determine if the benefit is taxable</a>
+<li><a href="#step1">Steps</a>
 </li>
-<li><a href="#h_2">Calculate the value of the benefit</a>
-</li>
-<li><a href="#h_3">Withhold payroll deductions and remit GST/HST</a></li>
-<li><a href="#h_4">Report the benefit on a slip</a></li>
-<li><a href="#h_5">References</a>
-</li>
+<li><a href="#step3">Calculate the value of the benefit</a>
+<li><a href="#h_5">References</a></li>
 </ul>
 
 
-
-
-<h2 id="h_1">Determine if the benefit is taxable</h2>
+<h2 id="stps">Steps</h2>
 <p class="mrgn-bttm-lg">Generally, if you provide special clothing or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 
-<h3>Situations</h3>
-
-<details><summary>Situation: You <strong>provide</strong> a distinctive uniform, protective clothing, safety footwear or safety glasses to your employee</summary>
-<h4>Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you provide <strong>one</strong> of the following:</p>
+<ol class="lst-stps stps-strpd">
+<li><h3 id="step1">Determine if the benefit provided is considered a distinctive uniform or protecting clothing</h3>
+<p>Under the CRA's administrative policy, the benefit considered a distinctive uniform or protecting clothing if <strong>one</strong> of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
 <ul class="list-unstyled cnjnctn-type-and">
@@ -322,13 +314,17 @@
 <li class="cnjnctn-col">Your employee <strong>cannot</strong> wear the clothing for personal purposes, for example, outside of business hours</li>
 </ul>	</li>	
 <li class="cnjnctn-col"><h4 class="text-muted">Protective clothing, safety footwear and safety glasses</h4> 
-<p><strong>Designed to protect</strong> your employee from hazards associated with their employment</p>
+<p>It is <strong>designed to protect</strong> your employee from hazards associated with their employment</p>
 </li>
 </ul>
-<h4>Taxable situation</h4>
-<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
-</details>
-
+<hr>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
+<p>Continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a> </p> </li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#h_01">Step 2 - Determine if the benefit provided is taxable</a></li>
+</ul>
+</li>
+<li><h3 id="step2">Determine if the benefit provided is taxable</h3>
 <details><summary>Situation: You <strong>reimburse or provide an accountable advance</strong> for a distinctive uniform, protective clothing, safety footwear or safety glasses</summary>
 <h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you reimburse or provide an accountable advance for a uniform or protective piece of clothing and <strong>all</strong> of the following apply::</p>
@@ -367,9 +363,15 @@
 <p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
 <p>If your employee can wear the clothing for personal purposes (outside of business hours), the benefit is taxable.</p>
 </details>
+<hr>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations. <strong>Do not</strong> continue to next step.  </li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a></li>
+</ul>
+</li>
 
 
-<h2 id="h_2">Calculate the value of the benefit</h2>
+<li><h3 id="step3">Calculate the value of the benefit</h3>
 <p><strong>If the benefit is taxable</strong>, the value of the benefit is equal to:</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
                                     <li><span class="fa-stack text-success">
@@ -395,16 +397,20 @@
                   </ul>
 
 <p>The amounts must be included in the pay period they were received or enjoyed. </p>
+</li>
+<li><h3 id="step4">Withhold payroll deductions and remit GST/HST</h3>
+  <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div></p>	
+</li>
 
-
-
-<h2 id="h_3">Withhold payroll deductions and remit GST/HST</h2>
-  <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div></p>
-
-<h2 id="h_4">Report the benefit on a slip</h2>
+<li><h3 id="step5">Report the benefit on a slip</h3>
 <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/report.txt"></div>
-		
-		 
+</li>
+
+</ol>
+
+
+
+	 
 		 
 <h2 id="h_5">References</h2>
 <h3 id="h_5_1">Related</h3>
