--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -313,6 +313,7 @@
 <li class="cnjnctn-col">Your employee <strong>cannot</strong> wear the clothing for personal purposes, for example, outside of business hours</li>
 </ul>	</li>	
 <li class="cnjnctn-col"><h4 class="text-muted">Protective clothing, safety footwear and safety glasses</h4> 
+<p>Your employee is required by law to wear it on the work site</p>
 <p>It is <strong>designed to protect</strong> your employee from hazards associated with their employment</p>
 </li>
 </ul>
@@ -320,7 +321,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
 <p>Continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a> </p> </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#h_01">Step 2 - Determine if the benefit provided is taxable</a></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit provided is taxable</a></li>
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit provided is taxable</h3>
