--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -313,8 +313,9 @@
 <li class="cnjnctn-col">Your employee <strong>cannot</strong> wear the clothing for personal purposes, for example, outside of business hours</li>
 </ul>	</li>	
 <li class="cnjnctn-col"><h4 class="text-muted">Protective clothing, safety footwear and safety glasses</h4> 
-<p>Your employee is required by law to wear it on the work site</p>
-<p>It is <strong>designed to protect</strong> your employee from hazards associated with their employment</p>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
+<li class="cnjnctn-col">It is <strong>designed to protect</strong> your employee from hazards associated with their employment</li>
 </li>
 </ul>
 <hr>
