--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -305,7 +305,7 @@
 
 <ol class="lst-stps stps-strpd">
 <li><h3 id="step1">Determine if the benefit provided is considered a distinctive uniform or protecting clothing</h3>
-<p>Under the CRA's administrative policy, the benefit considered a distinctive uniform or protecting clothing if <strong>one</strong> of the following:</p>
+<p>Under the CRA's administrative policy, the benefit is considered a distinctive uniform or protecting clothing if <strong>one</strong> of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
 <ul class="list-unstyled cnjnctn-type-and">
