--- a/guides/alberta/alberta-tax-information.html
+++ b/guides/alberta/alberta-tax-information.html
@@ -39,10 +39,19 @@
             		href: "https://www.canada.ca/en.html"
             		},{
             	title: "Canada Revenue Agency ",
-                     		href: "https://www.canada.ca/en/revenue-agency.html"
+                     		href: "/cra-arc/guides/alberta/revenue-agency.html"
             		},{
             	title: "Forms and publications",
-                     		href: "https://www.canada.ca/en/revenue-agency/services/forms-publications.html"
+                     		href: "/cra-arc/guides/alberta/forms-publications.html"
+            		},{
+            	title: "Tax packages for all years",
+                     		href: "/cra-arc/guides/alberta/tax-packages-years.html"
+            		},{
+            	title: "Get a T1 income tax package",
+                     		href: "/cra-arc/guides/alberta/general-income-tax-benefit-package.html"
+            		},{
+            	title: "Alberta - 2022 Income tax package",
+                     		href: "/cra-arc/guides/alberta/alberta.html"
             		}],
             	search: true,
             	siteMenu: true,
