--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -326,44 +326,20 @@
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit provided is taxable</h3>
-<details><summary>Situation: You <strong>reimburse or provide an accountable advance</strong> for a distinctive uniform, protective clothing, safety footwear or safety glasses</summary>
-<h4>Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you reimburse or provide an accountable advance for a uniform or protective piece of clothing and <strong>all</strong> of the following apply::</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm"> 
-<li class="cnjnctn-col">The benefit is for the purchase of uniforms or protective clothing </li>
-<li class="cnjnctn-col">The cost of the uniforms or protective clothing is reasonable and you can justify your position </li>
-<li class="cnjnctn-col">If the benefit is for protective clothing, your employee is required by law to wear it on the work site </li>
-<li class="cnjnctn-col">You must obtain receipts from your employee to document the purchases </li>
+<p>Under the CRA's administrative policy, if the benefit provided is for a distinctive uniform, protective clothing, safety footwear or safety glasses, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p>You provide an allowance and <strong>all</strong> of the following apply:</p> 
+<ul class="list-unstyled cnjnctn-type-and"> 
+<li class="cnjnctn-col">The benefit provided meets <strong>all</strong> conditions in step 1</li>
+<li class="cnjnctn-col">The amount of the allowance is reasonable and you can justify your position </li>
+</ul></li>
+<li class="cnjnctn-col"><p>You reimburse or provide an accountable advance and <strong>all</strong> of the following apply:</p> 
+<ul class="list-unstyled cnjnctn-type-and"> 
+<li class="cnjnctn-col">The benefit provided meets <strong>all</strong> conditions in step 1</li>
+<li class="cnjnctn-col">The cost is reasonable and you can justify your position </li>
+<li class="cnjnctn-col">You obtained receipts from your employee to document the purchases </li>
+</ul></li>
 </ul>
-<h4>Taxable situation</h4>
-<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
-<p>If your employee can wear the clothing for personal purposes (outside of business hours), the benefit is taxable.</p>
-</details>
-
-<details><summary>Situation: You provide an <strong>allowance</strong> for <strong>protective clothing</strong></summary>
-<h4>Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if you provide an allowance for protective clothing and <strong>all</strong> of the following apply: </p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm"> 
-<li class="cnjnctn-col">The law requires that your employee wear the protective clothing on the work site </li>
-<li class="cnjnctn-col">Your employee used the allowance to buy their protective clothing </li>
-<li class="cnjnctn-col">The amount of the allowance is reasonable and you can justify your position</li>
-</ul>
-<h4>Taxable situation</h4>
-<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
-<p>If your employee can wear the clothing for personal purposes (outside of business hours), the benefit is taxable.</p>
-</details>
-
-<details><summary>Situation: You <strong>reimburse</strong> or you provide an <strong>allowance</strong> for <strong>laundry or dry cleaning</strong></summary>
-<h4>Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply: </p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm"> 
-<li class="cnjnctn-col">You provide a reasonable allowance for laundry or dry cleaning costs of a uniform or protective clothing</li>
-<li class="cnjnctn-col">You reimburse for laundry or dry cleaning services for a uniform or protective clothing <strong>and</strong> your employee provides receipts to support these amounts</li>
-</ul>
-<h4>Taxable situation</h4>
-<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
-<p>If your employee can wear the clothing for personal purposes (outside of business hours), the benefit is taxable.</p>
-</details>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations. <strong>Do not</strong> continue to next step.  </li>
