--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -294,9 +294,8 @@
   	
 <ul>
 
-<li><a href="#step1">Steps</a>
-</li>
-<li><a href="#step3">Calculate the value of the benefit</a>
+<li><a href="#step1">Steps</a></li>
+<li><a href="#step3">Calculate the value of the benefit</a></li>
 <li><a href="#h_5">References</a></li>
 </ul>
 
@@ -316,7 +315,7 @@
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
 <li class="cnjnctn-col">It is <strong>designed to protect</strong> your employee from hazards associated with their employment</li>
-</li>
+</ul></li>
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
