--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -325,18 +325,15 @@
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit provided is taxable</h3>
-<p>Under the CRA's administrative policy, if the benefit provided is for a distinctive uniform, protective clothing, safety footwear or safety glasses, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
+<p>Under the CRA's administrative policy, if the benefit provided provided meets <strong>all conditions in step 1</strong>, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p>You provide an allowance and <strong>all</strong> of the following apply:</p> 
+<li class="cnjnctn-col"><h4 class="text-muted">Allowance</h4> 
+<p>The cost is reasonable and you can justify your position </p>
+</li>
+<li class="cnjnctn-col"><h4 class="text-muted">Reimbursement or accountable advance</h4> 
 <ul class="list-unstyled cnjnctn-type-and"> 
-<li class="cnjnctn-col">The benefit provided meets <strong>all</strong> conditions in step 1</li>
-<li class="cnjnctn-col">The amount of the allowance is reasonable and you can justify your position </li>
-</ul></li>
-<li class="cnjnctn-col"><p>You reimburse or provide an accountable advance and <strong>all</strong> of the following apply:</p> 
-<ul class="list-unstyled cnjnctn-type-and"> 
-<li class="cnjnctn-col">The benefit provided meets <strong>all</strong> conditions in step 1</li>
+<li class="cnjnctn-col">You received a copy of the receipts from your employee</li>
 <li class="cnjnctn-col">The cost is reasonable and you can justify your position </li>
-<li class="cnjnctn-col">You obtained receipts from your employee to document the purchases </li>
 </ul></li>
 </ul>
 <hr>
