--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -327,9 +327,10 @@
 <li><h3 id="step2">Determine if the benefit provided is taxable</h3>
 <p>Under the CRA's administrative policy, if the benefit provided provided meets <strong>all conditions in step 1</strong>, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4 class="text-muted">Allowance</h4> 
+<li class="cnjnctn-col"><h4 class="text-muted">Provide the benefit or allowance</h4> 
 <p>The cost is reasonable and you can justify your position </p>
 </li>
+
 <li class="cnjnctn-col"><h4 class="text-muted">Reimbursement or accountable advance</h4> 
 <ul class="list-unstyled cnjnctn-type-and"> 
 <li class="cnjnctn-col">You received a copy of the receipts from your employee</li>
