--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -327,7 +327,7 @@
 <li><h3 id="step2">Determine if the benefit provided is taxable</h3>
 <p>Under the CRA's administrative policy, if the benefit provided meets <strong>all conditions in step 1</strong>, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4 class="text-muted">You provide the distinctive uniform or protective clothing, or provide an allowance</h4> 
+<li class="cnjnctn-col"><h4 class="text-muted">You provide the benefit or provide an allowance</h4> 
 <p>The cost is reasonable and you can justify your position </p>
 </li>
 
