--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -318,12 +318,12 @@
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is <strong>taxable</strong>.</p>
 <p>Continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a> </p> </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit provided is taxable</a></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit is taxable</a></li>
 </ul>
 </li>
-<li><h3 id="step2">Determine if the benefit provided is taxable</h3>
+<li><h3 id="step2">Determine if the benefit is taxable</h3>
 <p>Under the CRA's administrative policy, if the benefit provided meets <strong>all conditions in step 1</strong>, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><h4 class="text-muted">You provide the benefit or an allowance</h4> 
