--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -324,17 +324,10 @@
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit is taxable</h3>
-<p>Under the CRA's administrative policy, if the benefit provided meets <strong>all conditions in step 1</strong>, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4 class="text-muted">You provide the benefit or an allowance</h4> 
-<p>The cost is reasonable and you can justify your position </p>
-</li>
-
-<li class="cnjnctn-col"><h4 class="text-muted">You reimburse or provide an accountable advance</h4> 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm"> 
-<li class="cnjnctn-col">You received a copy of the receipts from your employee</li>
+<p>Under the CRA's administrative policy, if the benefit provided meets <strong>all conditions in step 1</strong>, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">The cost is reasonable and you can justify your position </li>
-</ul></li>
+<li class="cnjnctn-col">If you reimbursed or provided an accountable advance, you received a copy of the receipts from your employee</li>
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
