--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -303,24 +303,24 @@
 
 <ol class="lst-stps stps-strpd">
 <li><h3 id="step1">Determine if the benefit provided is considered a distinctive uniform or protecting clothing</h3>
-<p>Under the CRA's administrative policy, the benefit is considered a distinctive uniform or protecting clothing if <strong>one</strong> of the following:</p>
+<p>Under the CRA's administrative policy, the benefit is considered a distinctive uniform or protecting clothing if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Your employee <strong>must</strong> wear while carrying out the employment duties</li>
-<li class="cnjnctn-col">Your employee <strong>cannot</strong> wear the clothing for personal purposes, for example, outside of business hours</li>
+<li class="cnjnctn-col">Your employee must wear while carrying out the employment duties</li>
+<li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
 </ul>	</li>	
 <li class="cnjnctn-col"><h4 class="text-muted">Protective clothing, safety footwear and safety glasses</h4> 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
-<li class="cnjnctn-col">It is <strong>designed to protect</strong> your employee from hazards associated with their employment</li>
+<li class="cnjnctn-col">It is designed to protect your employee from hazards associated with their employment</li>
 </ul></li>
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is <strong>taxable</strong>.</p>
-<p>Continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a> </p> </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit is taxable</a></li>
+<li class="cnjnctn-col"><p><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit <strong>does not</strong> meet the conditions above, the benefit is <strong>taxable</strong>.</p>
+<p>Continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a>.</p> </li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is considered a distinctive uniform or protecting clothing, continue to: <a href="#step2">Step 2 - Determine if the benefit is taxable</a>.</li>
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit is taxable</h3>
@@ -331,8 +331,9 @@
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations. <strong>Do not</strong> continue to next step.  </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a></li>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations.</p>
+<p><strong>Do not</strong> continue to next step. </p> </li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step3">Step 3 - Calculate the value of the benefit</a>.</li>
 </ul>
 </li>
 
