--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -324,8 +324,9 @@
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit is taxable</h3>
-<p>Under the CRA's administrative policy, if the benefit provided meets <strong>all conditions in step 1</strong>, including the cost related to laundry or dry cleaning, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Benefit provided meets <strong>all conditions in step 1</strong>, including if the cost is for laundry or dry cleaning</li>
 <li class="cnjnctn-col">The cost is reasonable and you can justify your position </li>
 <li class="cnjnctn-col">If you reimbursed or provided an accountable advance, you received a copy of the receipts from your employee</li>
 </ul>
