--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Uniforms and special clothing - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Uniforms, protective clothing, safety and special clothing - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -88,7 +88,7 @@
 
 
 	  <li>
-      <a href="uniform.html" class="active" aria-current="page">Uniforms and special clothing</a>
+      <a href="uniform.html" class="active" aria-current="page">Uniforms, protective clothing, safety and special clothing</a>
     </li>
 	  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -280,15 +280,14 @@
     
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Uniforms and special clothing</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Uniforms, protective clothing, safety and special clothing</h1>
 
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
 
 </div>
 
-<p>You may provide a benefit to your employee for distinctive clothing, protective clothing, safety footwear or safety glasses, including the cost related to laundry or dry cleaning to your employee.</p>
-	
+<p class="mrgn-bttm-lg">Generally, if you provide to your employee for distintive clothing, protective clothing, safety footwear or safety glasses, or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a>, including the cost related to laundry or dry cleaning, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
   <h2 class="h3">On this page</h2>
   	
 <ul>
@@ -299,7 +298,6 @@
 
 
 <h2 id="stps">Steps</h2>
-<p class="mrgn-bttm-lg">Generally, if you provide to your employee for distintive clothing, protective clothing, safety footwear or safety glasses, or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a>, including the cost related to laundry or dry cleaning, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 
 <ol class="lst-stps stps-strpd">
 <li><h3 id="step1">Determine if the benefit provided is considered a distinctive uniform or protecting clothing</h3>
