--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -370,7 +370,7 @@
                            <td>Work-related expenses</td>
                         </tr>
 			         <tr>
-                           <td> <a href="uniforms.html">Uniforms and special clothing</a> <span class="label label-info">CVB - SME reviewing</span></td>
+                           <td> <a href="uniforms.html">Uniforms, protective clothing, safety and special clothing</a> <span class="label label-info">CVB - SME reviewing</span></td>
                            <td>Work-related expenses</td>
                         </tr>
                      
