--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -88,7 +88,7 @@
 
 
 	  <li>
-      <a href="uniform.html" class="active" aria-current="page">Uniforms, protective clothing, safety and special clothing</a>
+      <a href="uniforms.html" class="active" aria-current="page">Uniforms, protective clothing, safety and special clothing</a>
     </li>
 	  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
