--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -287,7 +287,7 @@
 
 </div>
 
-<p class="mrgn-bttm-lg">Generally, if you provide to your employee for distintive clothing, protective clothing, safety footwear or safety glasses, or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a>, including the cost related to laundry or dry cleaning, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
+<p class="mrgn-bttm-lg">Generally, if you provide to your employee distintive clothing, protective clothing, safety footwear or safety glasses, or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a>, including the cost related to laundry or dry cleaning, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
   <h2 class="h3">On this page</h2>
   	
 <ul>
