--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -287,15 +287,16 @@
 
 </div>
 
-<p>You may provide educational assistance to your employee, a former employee or an employee's family member. For example: </p>
+<p>You may provide educational assistance to your employee, a former employee or an employee's family member. </p>
 
+<details><summary>Examplex</summary>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> Reimbursement or payment of tuition and training fees </li>
 <li><span class="fas fa-check fa-li text-success"></span> Scholarships and bursaries </li>
 <li><span class="fas fa-check fa-li text-success"></span> Subsidized school services </li>
 <li><span class="fas fa-check fa-li text-success"></span> Educational allowances </li>
 </ul>
-
+</details>
 	
 <h2 class="h3">On this page</h2>
   	
@@ -337,32 +338,32 @@
 <li class="cnjnctn-col">The course, program or training is <strong>not</strong> for your employee's <a href="#personal" aria-controls="centred-popup" class="wb-lbx" role="button">personal interest&nbsp;<span class="far fa-question-circle"></span></a> </li>
 </ul>
 <p>You must be able to <strong>clearly demonstrate you are the primary beneficiary of the expense</strong>.</p>
-<p>Your employee <strong>cannot claim </strong>the non-refundable tuition tax credit, or the educational amount, on their T1 return.</p>
+<p>If the benefit is <strong>not</strong> taxable and you paid for the expense, your employee <strong>cannot claim </strong>the non-refundable tuition tax credit, or the educational amount, on their T1 return.</p>
 <details><summary>What is specific employment-related, general employment-related or personal interest training</summary>
-<p>The CRA considered following 3 categories of training:  </p>
+<p>The CRA considers there are 3 categories of training:  </p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"><h5>Specific employment-related courses, programs or training   </h5> 
 <div id="ajax-specific">
 <p>Courses, programs or training taken to maintain or upgrade employment-related skills are mainly for the employer's benefit when it is reasonable to assume that the employee will resume their employment for a reasonable period of time after they finish the course.</p>
-<p>Tuition fees and other associated costs such as books, meals, travel, and accommodation that employers pay for courses leading to a degree, diploma, or certificate in a field related to the employee's current or future responsibilities in the employer's business.</p>
+<p>This includes tuition fees and other associated costs such as books, meals, travel, and accommodation that employers pay for courses leading to a degree, diploma, or certificate in a field related to the employee's current or future responsibilities in the employer's business.</p>
 </div>
 </li>
 <li class="cnjnctn-col"> <h5>Business or general employment-related courses, programs or training </h5> 
 <div id="ajax-general">
-<p>Courses, programs or trainingf or general employment-related, even if not directly related to an employer's business, are taken mainly for the employer's benefit.</p>
-<p>For example, fees the employer pays for stress management, employment equity, first aid, and language courses.</p>
+<p>Courses, programs or training for general employment-related, even if not directly related to an employer's business, which are taken mainly for the employer's benefit.</p>
+<p>This includes fees the employer pays for stress management, employment equity, first aid, and language courses.</p>
 </div>
 </li>
 <li class="cnjnctn-col"> <h5>Personal interest courses, programs or training   </h5> 
 <div id="ajax-personal">
-<p>Courses, programs or training for personal interest or technical skills not related to the employer's business are taken mainly for the employee's benefit. </p>
+<p>Courses, programs or training for personal interest or technical skills not related to the employer's business which are taken mainly for the employee's benefit. </p>
 </div>
 </li>
 </ul>
 </details>
 
 <h4>Taxable situation</h4>
-<p>If the benefit provided <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>If the benefit <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
 
