--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -324,7 +324,8 @@
 <p>The term fellowship is not defined in the Income Tax Act. Generally, a fellowship is an amount paid or benefits given for the purpose of advancing a person’s education. It is similar to a scholarship or a bursary, with the difference being that a fellowship is generally awarded to a graduate student by a university, charity, or similar body for doctoral studies or post-doctoral work.</p>
 </details>
 
-<h3>Benefit provided to your current, former or future employee</h3>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><h3>Benefit provided to your current, former or future employee</h3>
 <details><summary>Situation: You provide or reimburse for courses, programs, or training to your <strong>current or former employee</strong></summary>
 <h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you provide or reimburse for a course, a program, or training to your current or former employee, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
@@ -381,6 +382,8 @@
 <p>If the benefit provided <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
+</li>
+<li class="cnjnctn-col">
 
 <h3>Benefit provided to one of your employee's family member</h3>
 <details><summary>Situation: You provide <strong>free or reduced tuition fees</strong> to your employee’s family member</summary>
@@ -430,7 +433,8 @@
 <p>If the benefit <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
-
+</li>
+<li class="cnjnctn-col">
 <h3>Benefit provided to a recipient</h3>
 <details><summary>Situation: You pay the cost for a <strong>research grant</strong> to a recipient (not your employee) to assist them to carry out research</summary>
 <h3>Jeremiah... should we provide info here? reuse the content or redirect the user immediately to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/research-grants.html">Payments related to research grants</a>. Note that this content will also be rewritten on that weppage and is within the other payment segment</h3>
@@ -445,7 +449,8 @@
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 
 </details>
-
+</li>
+</ul>
 
 <h2 id="h_2">Calculate the value of the benefit</h2>
 <p><strong>If the benefit is taxable</strong>, the value of the benefit is equal to:</p>
