--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -327,7 +327,7 @@
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><h3>Benefit provided to your current, former or future employee</h3>
 <details><summary>Situation: You provide or reimburse for courses, programs, or training to your <strong>current or former employee</strong></summary>
-<h4>Non-taxable situation</h4>
+<h4 id="current">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you provide or reimburse for a course, a program, or training to your current or former employee, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee returns to work for you for a reasonable amount of time after the completion of the course, program or training, you must be able to justify your position regarding the length of the period of time being reasonable</li>
@@ -362,7 +362,6 @@
 </li>
 </ul>
 </details>
-
 <h4>Taxable situation</h4>
 <p>If the benefit <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
@@ -370,23 +369,23 @@
 
 <details><summary>Situation: You provide or reimburse for courses, programs, or training to your <strong>future employee</strong></summary>
 <h4>Non-taxable situation</h4>
-<p>If you provide or reimburse for a course, a program, or training to your future employee, this is <strong>not </strong>taxable as an employee benefit because there is no employee/employer relationship between the payer and the future employee (student).</p>
-<p>The individual must report the amounts received on their T1 return.</p>
+<p>If you provide or reimburse for a course, a program, or training to your future employee, this is <strong>not </strong>taxable as an employee benefit because there is no employee/employer relationship between the payer and the future employee (student) at the time the benefit is provided.</p>
+<p>The recipient must report the amounts received on their T1 return.</p>
 <details><summary>Example</summary>
 <p>A student may receive educational assistance in exchange for which they agree to work at the end of their studies or training for the person granting the financial assistance. </p>
 </details>
 <h5>Report on T4A slip</h5>
-<p>The payer must report the full amount of the educational assistance paid on a T4A slip. If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
+<p>You payer must report the full amount of the educational assistance paid to the recipient on a T4A slip <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
+ <p>If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
 <p>Continue to <a href="#h_4">Report the benefit on a slip</a>.</p>
-<h4>Taxable situation</h4>
-<p>If the benefit provided <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
-<p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
+<h4>Employee and employer relationship before the benefit is provided</h4>
+<p>If an employee-employer relationship was established before the benefit was provided, continue to: <a href="#current">You provide or reimburse for courses, programs, or training to your current or former employee</a>.</p>
 </details>
 </li>
 <li class="cnjnctn-col">
 
-<h3>Benefit provided to one of your employee's family member</h3>
-<details><summary>Situation: You provide <strong>free or reduced tuition fees</strong> to your employee’s family member</summary>
+<h3>Benefit provided to one of your employee's family members</h3>
+<details><summary>Situation: You provide <strong>free or reduced tuition fees</strong> to your employee’s family members</summary>
 <h4>Non-taxable situation</h4>
 <p>If you provide free or reduced tuition fees to your employee’s family member, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
